src/snapshots/enderpy__parser__tests__parse.snap
---
source: src/parser.rs
description: a = 1
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 5,
                },
                targets: [
                    BindingIdentifier {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        name: "a",
                    },
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 5,
                        },
                        value: "1",
                    },
                ),
            },
        ),
    ],
}
