src/snapshots/enderpy__parser__tests__parse_name-12.snap
---
source: src/parser.rs
description: "a = 'a'"
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 7,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 7,
                        },
                        value: Str(
                            "a",
                        ),
                    },
                ),
            },
        ),
    ],
}
