src/snapshots/enderpy__parser__tests__parse_name-3.snap
---
source: src/parser.rs
description: a = True
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 8,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 8,
                        },
                        value: Bool(
                            true,
                        ),
                    },
                ),
            },
        ),
    ],
}
