src/snapshots/enderpy__parser__tests__parse_name-4.snap
---
source: src/parser.rs
description: a = False
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 9,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 9,
                        },
                        value: Bool(
                            false,
                        ),
                    },
                ),
            },
        ),
    ],
}
